[package]
name = "rust-markdown"
version = "0.0.1"
authors = ["Matt White <code@typenil.com>"]
homepage = "https://github.com/typenil/rust-markdown"
description = "just following a tutorial:\nhttps://jesselawson.org/rust/getting-started-with-rust-by-building-a-tiny-markdown-compiler/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
